--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,7 +38,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :position %><br />
+          <%= f.label :position, "所属" %><br />
           <%= f.text_area :position, class: :form__text, id:"user_position" %>
         </div>
 
